# alais

./: .gitignore  README.md  pyproject.toml
src/alais/: .alais  main.py  version.py
tests/: test_main.py
