[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/alais/version.py"

[project]
name = "alais"
dynamic = ['version']
authors = [
    {name = 'Craig Tomkow', email = 'ctomkow@gmail.com'},
]
description = 'An alais for your terminal typos'
requires-python = '>=3.6'
license = {file = 'LICENSE'}
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies]
tests = [
    "pytest>=7.2.2,<8.0.0"
]

[project.scripts]
alais = 'alais.main:entrypoint'

[tool.setuptools.dynamic]
readme = {file = ['README.md'], content-type = 'text/markdown'}
version = {attr = 'alais.version.py.__version__'}
